# test_api_utf_tech

./: .gitignore  README.md  env_example  pyproject.toml
src/config/: settings.py  urls.py
src/foods/: admin.py
src/foods/api/: serializers.py  urls.py  views.py
src/foods/migrations/: 0001_initial.py
src/foods/service/: db.py
